# Master-s-Thesis

./: .gitignore  MastersDoctoralThesis.cls  README.md  bibliography.bib  code_master_thesis_JN.ipynb  main_file.tex  pyproject.toml  requirements.txt
Chapters/: Abstract.tex  Chapter1.tex  Chapter2.tex  Chapter3.tex  Chapter4.tex  Chapter5.tex  Chapter6.tex
data/: data.xlsx
notebooks/: pfas_nephrotoxicity_analysis.ipynb
results/: model_comparison.xlsx  predictions.xlsx
